--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -7,19 +7,19 @@
 			#editor { 
                 position: absolute;
 
-                width: 400px;
+                width: 520px;
                 height: 300px;
  
-                top: calc(180px);
+                top: calc(150px);
                 left: calc(800px);
 			}
 			#output {
                 position: absolute;
 
-                width: 350px;
+                width: 476px;
                 height: 100px;
  
-                top: calc(380px);
+                top: calc(350px);
                 left: calc(845px);
 
                 background-color: rgba(0,0,0, 0.5);
@@ -27,7 +27,11 @@
                 padding-left: 16px;
                 padding-top: 5px;
                 color: greenyellow;
-            }
+			}
+			
+			.hero-subheader__desc {
+				width: 500px;
+			}
 		</style>
 	</head>
 	<body class="{{ site.doks.color_theme }}">
