--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -11,7 +11,7 @@
                 height: 300px;
  
                 top: calc(150px);
-                left: calc(800px);
+                left: 53vw;
 			}
 			#output {
                 position: absolute;
@@ -20,7 +20,7 @@
                 height: 100px;
  
                 top: calc(350px);
-                left: calc(845px);
+                left: 56.1vw;
 
                 background-color: rgba(0,0,0, 0.5);
 
