--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -36,7 +36,7 @@
 		<div class="hero-subheader{% if page.grid_navigation %} hero-subheader--before-out{% endif %}">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-7" style="float:left">
+					<div class="col-md-7" style="float:left;width:initial">
 						<div class="align-container" data-mh>
 							<div class="align-inner">
 								{% if page.title %}
