--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -12,14 +12,12 @@
                 height: 300px;
 			}
 			#output {
-                position: absolute;
-
                 width: 476px;
                 height: 100px;
+				
+				bottom: 0px;
+				left: 43px;
  
-                top: calc(350px);
-                left: 56.1vw;
-
                 background-color: rgba(0,0,0, 0.5);
 
                 padding-left: 16px;
@@ -63,8 +61,9 @@
 					</div><!-- /.col -->
 					
 					<div id="playground">
-						<div id="editor"></div>
-						<div id="output">
+						<div id="editor">
+							<div id="output">
+							</div>
 						</div>
 					</div>
 
