--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -17,6 +17,8 @@
 				
 				bottom: 0px;
 				left: 43px;
+				
+				z-index: 1;
  
                 background-color: rgba(0,0,0, 0.5);
 
@@ -62,9 +64,10 @@
 					
 					<div id="playground">
 						<div id="editor">
-							<div id="output">
-							</div>
+							
 						</div>
+						<div id="output">
+							</div>
 					</div>
 
 				</div><!-- /.row -->
