--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -12,10 +12,11 @@
                 height: 300px;
 			}
 			#output {
+				position: relative;
                 width: 476px;
                 height: 100px;
 				
-				bottom: 0px;
+				bottom: 100px;
 				left: 43px;
 				
 				z-index: 1;
