--- a/doks-theme/_layouts/default.html
+++ b/doks-theme/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta property="og:image" content="https://rookielang.github.io/r.png">
+
 		{% include site-head.html %}
 	</head>
 	<body class="{{ site.doks.color_theme }}" data-spy="scroll" data-target=".js-scrollspy">
