--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta property="og:image" content="https://rookielang.github.io/r.png">
+
 		{% include site-head.html %}
 
 		<style>
