--- a/doks-theme/_layouts/default.html
+++ b/doks-theme/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta property="og:image" content="https://rookielang.github.io/r.png">
+		<meta property="og:image" content="https://rookielang.github.io/www/r.png">
 
 		{% include site-head.html %}
 	</head>
