--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -121,7 +121,7 @@ console.log = function(v) {
 };
 </script>
 <script src="www/presets.js"></script>
-<script src="https://pjc0247.github.io/try-rookie/rklang.js"></script>
+<script src="https://pjc0247.github.io/try-rookie/www/rklang.js"></script>
 <script>
 	console.log = prev_log;
 </script>
