--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -29,6 +29,8 @@
                 padding-left: 16px;
                 padding-top: 5px;
                 color: greenyellow;
+
+				overflow: scroll;
 			}
 			
 			.hero-subheader__desc {
