--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -30,7 +30,7 @@
                 padding-top: 5px;
                 color: greenyellow;
 
-				overflow-y: scroll;
+				overflow-y: auto;
 			}
 			
 			.hero-subheader__desc {
